# middle-rust-blockchain-project-3

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
blog-cli/: Cargo.toml
blog-cli/src/: main.rs
blog-client/: Cargo.toml  build.rs
blog-client/proto/: blog.proto
blog-client/src/: error.rs  grpc_client.rs  http_client.rs  lib.rs
blog-server/: Cargo.toml  build.rs
blog-server/.sqlx/: query-606364c79e0990deb07dfbe6c32b3d302d083ec5333f3a5ce04113c38a041100.json  query-74bf845a65e1ac62f25876eaebf7f0ecea4214222545d7fed5d93ed830bdd9d7.json  query-8f54309bb9a8ce8d4e0e4f15beba2c3c6a481c4b8e860c74d9d7ef479f143c99.json  query-b3bdb01b313f3dfc2d7a18625965468f70aae6e601c095f660e9aaf7d4044490.json  query-b6019471ff1989ef2f0658b0b34e683fdc706751e2bb69043544c9a4d08b5ba0.json
blog-server/migrations/: 20260128184335_create_users.down.sql  20260128184335_create_users.up.sql  20260129060242_create_posts.down.sql  20260129060242_create_posts.up.sql
blog-server/proto/: blog.proto
blog-server/src/: main.rs
blog-server/src/application/: auth_service.rs  blog_service.rs  mod.rs
blog-server/src/data/: mod.rs  post_repository.rs  user_repository.rs
blog-server/src/domain/: error.rs  macros.rs  mod.rs  post.rs  user.rs
blog-server/src/infrastructure/: database.rs  error.rs  jwt.rs  logging.rs  mod.rs
blog-server/src/presentation/: grpc_service.rs  http_handlers.rs  middleware.rs  mod.rs
blog-wasm/: Cargo.toml  build.sh
blog-wasm/src/: lib.rs
blog-wasm/www/: app.js  index.html  styles.css
