[workspace]
resolver = "3"
members = ["blog-cli","blog-client", "blog-server", "blog-wasm"]

[workspace.package]
name = "blog-project"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tonic = "0.14"
prost = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"

tokio = { version = "1.49", features = ["rt-multi-thread"]}

sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono"]}

serde = { version = "1.0"}

dotenv = "0.15"