[workspace]
resolver = "3"
members = ["blog-cli","blog-client", "blog-server", "blog-wasm"]

[workspace.package]
name = "blog-project"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tonic = "0.14"
prost = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"

tokio = { version = "1.49", features = ["rt-multi-thread"]}

axum = { version = "0.8"}

sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono"]}

serde = { version = "1.0"}

thiserror = { version = "2.0"}
anyhow = { version = "1.0" }

dotenv = "0.15"

jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
argon2 = { version = "0.5", features = ["std"] }
