[package]
name = "blog-client"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tonic-prost = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }

chrono = { workspace = true }

reqwest = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
