[package]
name = "blog-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tonic-prost = { workspace = true }

tokio = { workspace = true }

sqlx = { workspace = true }

serde = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }

dotenv = { workspace = true }

jsonwebtoken = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
