[package]
name = "blog-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tonic-prost = { workspace = true }

tokio = { workspace = true }

axum = { workspace = true }

sqlx = { workspace = true }

serde = { workspace = true }
validator = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }

dotenvy = { workspace = true }

jsonwebtoken = { workspace = true }

argon2 = { workspace = true }

tower-http = { workspace = true }
tower = { workspace = true }
tower_governor = { workspace = true }

clap = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
