[package]
name = "blog-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4"
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
serde_json = { workspace = true }
gloo-net = "0.6"

[dependencies.web-sys]
version = "0.3"
features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
    "Storage",
]
